# stm32-nucleo-blinky

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
