[package]
name = "stm32-nucleo-blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt ="1.0.0"
panic-probe = { version = "1.0.0", features = [ "print-defmt" ] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
hal = { package = "stm32-hal2", version = "^1.9.0", features = ["f411", "f4rt"]}